added: chatFormat combobox in settings of gui chatFormat in ChatPrefs compact version of chat_section.html changes to abstractChatTabController to append chat text correctly

--- a/src/main/resources/theme/settings/chat.fxml
+++ b/src/main/resources/theme/settings/chat.fxml
@@ -40,6 +40,7 @@
                         <CheckBox fx:id="hideFoeCheckBox" mnemonicParsing="false" text="%settings.chat.hideFoe"/>
                         <Label text="%settings.chat.timeFormat"/>
                         <ComboBox fx:id="timeComboBox"/>
+                        <ComboBox fx:id="chatComboBox"/>
                     </children>
                 </VBox>
             </content>
